--- a/libs/common/services/webhook/CMakeLists.txt
+++ b/libs/common/services/webhook/CMakeLists.txt
@@ -1,10 +1,7 @@
-add_compile_definitions(HAVE_SOIL=1)
-
-option(ADD_MQTT_CLIENT "MQTT Client" ON)
-option(ADD_WEBHOOK "WebHook service" ON)
+add_compile_definitions(HAVE_SYS_WEBHOOK=1)
 
 target_sources(${lib_name} INTERFACE
-  ${CMAKE_CURRENT_LIST_DIR}/soil.c
+  ${CMAKE_CURRENT_LIST_DIR}/webhook.c
 )
 
 target_include_directories(${lib_name} INTERFACE ${CMAKE_CURRENT_LIST_DIR})
