--- a/libs/common/devices/CMakeLists.txt
+++ b/libs/common/devices/CMakeLists.txt
@@ -28,6 +28,10 @@ if(ADD_LCD)
 include(${CMAKE_CURRENT_LIST_DIR}/lcd/CMakeLists.txt)
 endif()
 
+if(ADD_CHIP_TEMPERATURE)
+include(${CMAKE_CURRENT_LIST_DIR}/temperature/CMakeLists.txt)
+endif()
+
 target_sources(${lib_name} INTERFACE
    ${CMAKE_CURRENT_LIST_DIR}/devices_init.c
 )
