Implement device for reading AJ-SR04M sonar sensor
Refactored existing code for reading AJ-SR04M sonar sensor as device
module.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/libs/common/devices/CMakeLists.txt
+++ b/libs/common/devices/CMakeLists.txt
@@ -32,6 +32,10 @@ if(ADD_CHIP_TEMPERATURE)
 include(${CMAKE_CURRENT_LIST_DIR}/temperature/CMakeLists.txt)
 endif()
 
+if(ADD_SONAR)
+include(${CMAKE_CURRENT_LIST_DIR}/sonar/CMakeLists.txt)
+endif()
+
 target_sources(${lib_name} INTERFACE
    ${CMAKE_CURRENT_LIST_DIR}/devices_init.c
 )
