Add support for a File System
Added support for a small fail-safe filesystem based on littlefs.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "libs/pico-sdk"]
 	path = libs/pico-sdk
 	url = https://github.com/raspberrypi/pico-sdk
+[submodule "libs/littlefs-lib"]
+	path = libs/littlefs-lib
+	url = https://github.com/lurk101/littlefs-lib
