Add support for persistent user configuration
Store user defined configuration parameters on the local file system.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/libs/common/services/CMakeLists.txt
+++ b/libs/common/services/CMakeLists.txt
@@ -4,6 +4,10 @@ if(ADD_SYS_FS)
    include(${CMAKE_CURRENT_LIST_DIR}/fs/CMakeLists.txt)
 endif()
 
+if(ADD_SYS_CFG_STORE)
+   include(${CMAKE_CURRENT_LIST_DIR}/cfg_store/CMakeLists.txt)
+endif()
+
 if(ADD_SYS_LOG)
    include(${CMAKE_CURRENT_LIST_DIR}/log/CMakeLists.txt)
 endif()
