--- a/libs/common/CMakeLists.txt
+++ b/libs/common/CMakeLists.txt
@@ -9,6 +9,7 @@ option(ADD_SYS_LOG "System Log" ON)
 option(ADD_SYS_WIFI "WIFI" ON)
 option(ADD_NTP "NTP Client" ON)
 option(ADD_WEBSERVER "Web Server" ON)
+option(ADD_WEBHOOK "WebHook service" ON)
 option(ADD_SYS_COMMANDS "System Commands" ON)
 option(ADD_CHIP_TEMPERATURE "Internal Chip Temperature" ON) 
 option(ADD_SYS_TFTP_SERVER "TFTP Server" ON)
