Introduce common engine for managing the commands
Currently the logic for registering, parsing and executing commands is
in MQTT and WEB modules, as both of them are responsible for receiving
user commands. There is a lot of duplicated code. This approach is not
flexible and robust. When another command module is added, the same
code should be copied and modified.
Introduce a new "command engine" module, responsible for user commands.
Removed all duplicated code and simplified MQTT and WEB implementation.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/libs/common/CMakeLists.txt
+++ b/libs/common/CMakeLists.txt
@@ -13,6 +13,7 @@ option(ADD_WEBHOOK "WebHook service" ON)
 option(ADD_SYS_COMMANDS "System Commands" ON)
 option(ADD_CHIP_TEMPERATURE "Internal Chip Temperature" ON) 
 option(ADD_SYS_TFTP_SERVER "TFTP Server" ON)
+option(ADD_COMMANDS "Commands engine" ON)
 
 add_compile_definitions(CYW43_HOST_NAME=\"${PROJECT_NAME}\")
 
