--- a/libs/common/CMakeLists.txt
+++ b/libs/common/CMakeLists.txt
@@ -14,6 +14,7 @@ option(ADD_SYS_COMMANDS "System Commands" ON)
 option(ADD_CHIP_TEMPERATURE "Internal Chip Temperature" ON) 
 option(ADD_SYS_TFTP_SERVER "TFTP Server" ON)
 option(ADD_COMMANDS "Commands engine" ON)
+option(ADD_SYS_SCRIPTS "Scripts" ON)
 
 add_compile_definitions(CYW43_HOST_NAME=\"${PROJECT_NAME}\")
 
