--- a/libs/common/services/CMakeLists.txt
+++ b/libs/common/services/CMakeLists.txt
@@ -52,6 +52,10 @@ if(ADD_COMMANDS)
    include(${CMAKE_CURRENT_LIST_DIR}/commands/CMakeLists.txt)
 endif()
 
+if(ADD_SYS_SCRIPTS)
+   include(${CMAKE_CURRENT_LIST_DIR}/scripts/CMakeLists.txt)
+endif()
+
 target_sources(${lib_name} INTERFACE
    ${CMAKE_CURRENT_LIST_DIR}/systems_init.c
 )
