Add support for GPIO IRQ processing
All custom interrupts on GPIO ports are handled by a single user
callback function. In order to support this functionality by multiple
devices, a tiny wrapper logic is implemented around custom interrupts
API.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/libs/common/CMakeLists.txt
+++ b/libs/common/CMakeLists.txt
@@ -36,6 +36,7 @@ target_sources(${lib_name} INTERFACE
    ${dir}/base64.c
    ${dir}/system.c
    ${dir}/sys_utils.c
+   ${dir}/sys_irq.c
    ${dir}/system_modules.c
    ${dir}/time.c
    ${dir}/manchester_code.c
