Add support for NTC analog temperature sensor
Extended the current temperature device to support also externally
attached analog temperature sensor. Implemented support for NTC sensor.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/libs/common/devices/CMakeLists.txt
+++ b/libs/common/devices/CMakeLists.txt
@@ -28,7 +28,7 @@ if(ADD_LCD)
 include(${CMAKE_CURRENT_LIST_DIR}/lcd/CMakeLists.txt)
 endif()
 
-if(ADD_CHIP_TEMPERATURE)
+if(ADD_TEMPERATURE)
 include(${CMAKE_CURRENT_LIST_DIR}/temperature/CMakeLists.txt)
 endif()
 
