--- a/libs/common/CMakeLists.txt
+++ b/libs/common/CMakeLists.txt
@@ -11,7 +11,7 @@ option(ADD_NTP "NTP Client" ON)
 option(ADD_WEBSERVER "Web Server" ON)
 option(ADD_WEBHOOK "WebHook service" ON)
 option(ADD_SYS_COMMANDS "System Commands" ON)
-option(ADD_CHIP_TEMPERATURE "Internal Chip Temperature" ON) 
+option(ADD_TEMPERATURE "Temperature sensors" ON) 
 option(ADD_SYS_TFTP_SERVER "TFTP Server" ON)
 option(ADD_COMMANDS "Commands engine" ON)
 option(ADD_SYS_SCRIPTS "Scripts" ON)
