New service module: system status report
Currently the functionality for periodic reporting of the system status
is part of the main system loop. Moved that logic into new service
module: "sys_state". That simplifies the main loop logic.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/libs/common/CMakeLists.txt
+++ b/libs/common/CMakeLists.txt
@@ -15,6 +15,7 @@ option(ADD_TEMPERATURE "Temperature sensors" ON)
 option(ADD_SYS_TFTP_SERVER "TFTP Server" ON)
 option(ADD_COMMANDS "Commands engine" ON)
 option(ADD_SYS_SCRIPTS "Scripts" ON)
+option(ADD_SYS_STATE "System status log" ON)
 
 add_compile_definitions(CYW43_HOST_NAME=\"${PROJECT_NAME}\")
 
