Add ADC helper functions
Analog devices are connected to the one of the ADC inputs of the Pico.
The logic to read the ADC and convert the measured value is common
for them and currently is duplicated. Refactor that ADC logic in a
device helper APIs.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/libs/common/devices/CMakeLists.txt
+++ b/libs/common/devices/CMakeLists.txt
@@ -1,5 +1,7 @@
 target_include_directories(${lib_name} INTERFACE ${CMAKE_CURRENT_LIST_DIR})
 
+include(${CMAKE_CURRENT_LIST_DIR}/common/CMakeLists.txt)
+
 if(ADD_ONE_WIRE)
    include(${CMAKE_CURRENT_LIST_DIR}/one_wire/CMakeLists.txt)
 endif()
