Add support for analog pressure sensor
New device added - analog pressure sensor, attached to ADC.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/libs/common/devices/CMakeLists.txt
+++ b/libs/common/devices/CMakeLists.txt
@@ -42,6 +42,10 @@ if(ADD_FLOW_YF)
 include(${CMAKE_CURRENT_LIST_DIR}/flow_yf/CMakeLists.txt)
 endif()
 
+if(ADD_PRESS_ANALOG)
+include(${CMAKE_CURRENT_LIST_DIR}/pressure/CMakeLists.txt)
+endif()
+
 target_sources(${lib_name} INTERFACE
    ${CMAKE_CURRENT_LIST_DIR}/devices_init.c
 )
