Switch from RTC to AON time APIs
The rtc hardware and APIs are available only on Pico and Pico W boards.
The next generation Pico 2 and Pico 2 W does not have rtc. The SDK
provides abstraction layer to handle that - AON timer. Refactor the code
to use AON APIs instead of RTC, to simplify support for next generation
Pico 2.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/app/solar/CMakeLists.txt
+++ b/app/solar/CMakeLists.txt
@@ -96,7 +96,7 @@ endif()
 pico_add_extra_outputs(${PROJECT_NAME})
 
 target_link_libraries(${PROJECT_NAME} ${TINY_USB_HOST} ${TINY_USB_BOARD} ${PICO_PIO_USB}
-		      pico_stdlib hardware_i2c hardware_rtc hardware_adc
+		      pico_stdlib hardware_i2c pico_aon_timer hardware_adc
 		      hardware_dma hardware_pio
 		      pico_cyw43_arch_lwip_threadsafe_background
 		      pico_lwip_sntp herak_common)
