--- a/libs/common/services/tftp_client/CMakeLists.txt
+++ b/libs/common/services/tftp_client/CMakeLists.txt
@@ -1,8 +1,7 @@
-option(ADD_SYS_FS "File System" ON)
-add_compile_definitions(HAVE_SYS_TFTP_SERVER=1)
+add_compile_definitions(HAVE_SYS_TFTP_CLIENT=1)
 
 target_sources(${lib_name} INTERFACE
-  ${CMAKE_CURRENT_LIST_DIR}/tftp_srv.c
+  ${CMAKE_CURRENT_LIST_DIR}/tftp_client.c
 )
 
 target_include_directories(${lib_name} INTERFACE ${CMAKE_CURRENT_LIST_DIR})
