FS: Add copy command
Added new command for copying local or remote files. With switch from
tftp server to tftp client, this command is the only way for copying
remote files on the device, using the tftp client under the hood.

fs?cp:<source>?<destination> - Copy `source` file to `destination`.
Source and destination can be local files (with full path) or tftp
url in format `tftp://<IP-ADDR>[:<PORT-NUM>]/<FILENAME>`.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/libs/common/services/fs/CMakeLists.txt
+++ b/libs/common/services/fs/CMakeLists.txt
@@ -3,6 +3,7 @@ add_compile_definitions(FS_SIZE=131072) #  128K File System size
 
 target_sources(${lib_name} INTERFACE
   ${CMAKE_CURRENT_LIST_DIR}/fs.c
+  ${CMAKE_CURRENT_LIST_DIR}/fs_tftp.c
 )
 
 target_include_directories(${lib_name} INTERFACE
