--- a/version.h.in
+++ b/version.h.in
@@ -2,8 +2,10 @@
 #define __HERAK_VERSION_H__
 
 #define PROJECT_VERSION "@PROJECT_VERSION@"
+#define IMAGE_NAME "@IMAGE_NAME@"
+#define IMAGE_FILE "@IMAGE_FILE@"
 #define GIT_COMMIT_HASH "@GIT_COMMIT_HASH@"
-#define BUILD_DATE __DATE__
-#define BUILD_TIME __TIME__
+#define BUILD_DATE "@BUILD_DATE@"
+#define BUILD_TIME "@BUILD_TIME@"
 
 #endif /* __HERAK_VERSION_H__  */
