--- a/app/common/CMakeLists.txt
+++ b/app/common/CMakeLists.txt
@@ -14,6 +14,7 @@ option(ADD_LCD "LCD HD44780" ON)		# libs/common/devices/lcd/README.md
 option(ADD_BMS_JK "JK BMS" ON)			# libs/common/devices/bms_jk/README.md
 option(ADD_SONAR "AJ-SR04M sonar sensor" ON)			# libs/common/devices/sonar/README.md
 option(ADD_FLOW_YF "Water Flow YF sensor" ON)			# libs/common/devices/flow_yf/README.md
+option(ADD_PRESS_ANALOG "Analog pressure sensor" ON)  # libs/common/devices/apress/README.md
 
 # CMake settings
 set(CMAKE_C_STANDARD 11)
