--- a/libs/common/services/fs/CMakeLists.txt
+++ b/libs/common/services/fs/CMakeLists.txt
@@ -1,5 +1,10 @@
 add_compile_definitions(HAVE_SYS_FS=1)
-add_compile_definitions(FS_SIZE=131072) #  128K File System size
+
+#  128K File System size
+# If OTA is used and FS size is changed, a new boot loader must be compiled
+# and flashed with the new FS size.
+add_compile_definitions(FS_SIZE=131072)
+set(PFB_RESERVED_FILESYSTEM_SIZE_KB 128)
 
 target_sources(${lib_name} INTERFACE
   ${CMAKE_CURRENT_LIST_DIR}/fs.c
