Implement Wake-On-LAN sender
Implemented new service for sending Wake-On-LAN packets from raspberry
to a device in the local network. There are use cases where the
raspberry devices are started first in the network in a power down / u[
event. Some servers do not start automatically. This new service allows
to implement recovery logic in such use cases.

Signed-off-by: Tzvetomir Stoyanov <tz.stoyanov@gmail.com>

--- a/libs/common/CMakeLists.txt
+++ b/libs/common/CMakeLists.txt
@@ -13,6 +13,7 @@ option(ADD_TEMPERATURE "Temperature sensors" ON)
 option(ADD_COMMANDS "Commands engine" ON)
 option(ADD_SYS_STATE "System status log" ON)
 option(ADD_SYS_TFTP_CLIENT "TFTP Client" ON)
+option(ADD_WOL "Wake on LAN" ON)
 
 if ( NOT DEFINED ADD_OTA )
 option(ADD_OTA "Bootloader and OTA updates" ON)
